# Ecommerce_Data_Warehouse

./: README.md  pyproject.toml
airflow/.astro/: config.yaml
airflow/dags/: exampledag.py
code/gerar_dados/: gerar_dados.py  gerar_dados_alteracao_cadastro.py  gerar_dados_categoria_produtos.py  gerar_dados_clientes.py  gerar_dados_clientes_enderecos.py  gerar_dados_enderecos.py  gerar_dados_pedidos.py  gerar_dados_precos_produtos.py  gerar_dados_produtos.py
code/scripts_sql/: create_tables.sql
dbt_project/: dbt_project.yml
dbt_project/models/mart/: dim_addresses.sql  dim_calendar.sql  dim_customers.sql  dim_products.sql  fact_order_items.sql  fact_orders.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_addresses.sql  stg_avaliacao_produto.sql  stg_categorias_produtos.sql  stg_category_products.sql  stg_clientes.sql  stg_customers.sql  stg_enderecos.sql  stg_itens_pedido.sql  stg_order_items.sql  stg_orders.sql  stg_pedidos.sql  stg_precos_produtos.sql  stg_product_price.sql  stg_product_review.sql  stg_products.sql  stg_produtos.sql
files/input/: list_products.csv  lista_produtos.csv
files/output/: categoria_produtos.csv  clientes.csv  precos_produtos.csv  produtos.csv
src/python/: change_info.py  customers.py  main.py  orders.py  product_prices.py  products.py
src/sql/: create_tables.sql
